# CMakeTutorial

cmake_tutorial_01/: CMakeLists.txt  helloword.cpp
cmake_tutorial_02/example/: CMakeLists.txt
cmake_tutorial_02/example/src/: helloword.cpp
cmake_tutorial_02/lib/: CMakeLists.txt  build_linux.sh  build_win.bat
cmake_tutorial_02/lib/cmake/: uninstall_target.cmake.in
cmake_tutorial_02/lib/include/: HellowLib.h  macros.h
cmake_tutorial_02/lib/src/: HellowLib.cpp
